--- a/css_assignments/portfolio_assignment/index.html
+++ b/css_assignments/portfolio_assignment/index.html
@@ -42,7 +42,7 @@
                         <img src="/Users/montypreston/Desktop/DOJO/web_fundamentals/css_assignments/portfolio_assignment/Portfolio_images/CSS.png" alt="CSS icon">
                         <img src="/Users/montypreston/Desktop/DOJO/web_fundamentals/css_assignments/portfolio_assignment/Portfolio_images/bootstrap.png" alt="Bootstrap icon">
                     </div>
-                    <button class="centered" type="La_Mode">La Mode</button>
+                    <button class="centered" value="La_Mode">La Mode</button>
                 </div>
                 <div class="sub_content">
                     <h3>Family Contacts</h3>
@@ -59,7 +59,7 @@
                         <img src="/Users/montypreston/Desktop/DOJO/web_fundamentals/css_assignments/portfolio_assignment/Portfolio_images/CSS.png" alt="CSS icon">
                         <img src="/Users/montypreston/Desktop/DOJO/web_fundamentals/css_assignments/portfolio_assignment/Portfolio_images/socket.png" alt="Socket icon">
                     </div>
-                    <button class="centered" type="Family_Contacts">Family Contacts</button>
+                    <button class="centered" value="Family_Contacts">Family Contacts</button>
                 </div>
                 <div class="sub_content">
                     <h3>fiveEleven</h3>
@@ -77,7 +77,7 @@
                         <img src="/Users/montypreston/Desktop/DOJO/web_fundamentals/css_assignments/portfolio_assignment/Portfolio_images/JavaScript.png" alt="JavaScript icon">
                         <img src="/Users/montypreston/Desktop/DOJO/web_fundamentals/css_assignments/portfolio_assignment/Portfolio_images/materialize.png" alt="Materialize icon">
                     </div>
-                    <button class="centered" type="fiveEleven">fiveEleven</button>
+                    <button class="centered" value="fiveEleven">fiveEleven</button>
                 </div>
             </div> <!-- end of .main_content-->
         </div> <!-- end of .container-->
